# hoverpilot

./: .env.example  .gitignore  LICENSE  README.md  compose.jetson.yml  pyproject.toml
docs/: realflight-link-interface.md
src/hoverpilot/: config.py  main.py  validate_env.py
src/hoverpilot/envs/: __init__.py  hover_env.py
src/hoverpilot/rflink/: client.py  models.py  protocol.py
src/hoverpilot/rl/: __init__.py  ppo.py
src/hoverpilot/training/: __init__.py  hover.py
src/hoverpilot/utils/: logger.py
tests/: test_hover_env.py  test_hover_training.py  test_logger.py  test_rflink_actions.py  test_rflink_client.py  test_rl_ppo.py
