[project]
name = "hoverpilot-rflink"
version = "0.1.0"
description = "RealFlight Link client for HoverPilot"
requires-python = ">=3.10"

dependencies = [
    "gymnasium",
    "numpy",
    "pydantic",
    "python-dotenv"
]

[project.optional-dependencies]
rl = ["torch>=2.0.0"]

[project.scripts]
hoverpilot-validate = "hoverpilot.validate_env:main"
hoverpilot-ppo = "hoverpilot.rl.ppo:main"

[tool.setuptools.packages.find]
where = ["src"]
