[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hoverpilot-rflink"
version = "0.1.0"
description = "RealFlight Link client for HoverPilot"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "gymnasium",
    "numpy",
    "pydantic",
    "python-dotenv"
]

[project.optional-dependencies]
rl = [
    "tensorboard>=2.10,<2.16; python_version < '3.9'",
    "tensorboard>=2.16.0; python_version >= '3.9'",
    "torch>=1.12; python_version < '3.10'",
    "torch>=2.0.0; python_version >= '3.10'",
]

[project.scripts]
hoverpilot-demo = "hoverpilot.main:main"
hoverpilot-validate = "hoverpilot.validate_env:main"
hoverpilot-ppo = "hoverpilot.rl.ppo:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]
